...
          tabBarIcon: ({ color, size }) => <Wallet color={color} size={size} strokeWidth={2.2} />,
        }}
      />
      <Tabs.Screen
        name="more"
        options={{
          title: 'More',
          tabBarIcon: ({ color, size }) => <LayoutGrid color={color} size={size} strokeWidth={2.2} />,
        }}
      />
    </Tabs>
  );
}
...
